@@ -1,5 +1,10 @@
-2002-01-07  Don Porter <dgp@users.sourceforge.net>
+2002-01-09  Don Porter <dgp@users.sourceforge.net>
 
+	* generic/tclTest.c (MainLoop):
+	* tests/main.test (Tcl_Main-1.{3,4,5,6}):  Corrected some non-portable
+	tests from the new Tcl_Main changes.  Thanks to Kevin Kenny.
+
+2002-01-07  Don Porter <dgp@users.sourceforge.net>
 	* generic/tclEvent.c (TclInExit):
 	* generic/tclIOUtil.c (SetFsPathFromAbsoluteNormalized,
 	  SetFsPathFromAny,Tcl_FSNewNativePath,DupFsPathInternalRep):
